dashboard/client/components/Layout/styles.scss
.layout {
  display: flex;
  height: 100vh;
  width: 100%;
  overflow: hidden;
  background: var(--bg-secondary);
}

main {
  flex-grow: 1;
  overflow: hidden;
  background: var(--bg-primary);
  box-shadow: 0 0 0 1px rgba(0,0,0,.05), 0 4px 24px 2px rgba(0,0,0,.1);
  transition: all .3s cubic-bezier(.165,.84,.44,1);
  position: absolute;
  left: 360px;
  top: 0;
  bottom: 0;
  right: 0;
  z-index: 3000;
  border-radius: 8px 0 0 8px;
}

.content {
  padding-bottom: 125px;
  height: 100%;
  overflow-y: auto;
  border-left: 20px solid var(--bg-secondary);
}

